message Constant {
  enum Type {
    INTEGER = 0;
    STRING = 1;
    HEXFLOAT64 = 2;
    BIGNUM = 3;
    CHARACTER = 4;
  }
  required Type type = 1;
  optional sint32 intvalue = 2;
  optional bytes bytesvalue = 3;
}
message Selector {
  required string name = 1;
  required uint32 arity = 2;
}

message HandlerTable {
  required uint32 type = 1;
  required uint32 stackLevel = 2;
  required uint32 target = 3;
  required uint32 start = 4;
  required uint32 end = 5;
}

message Method {
  required uint32 numLocals = 1;
  repeated HandlerTable htable = 2;
  required string verb = 3;
  required bytes code = 4;
}

message Matcher {
  required uint32 numLocals = 1;
  repeated HandlerTable patternHandlerTable = 2;
  repeated HandlerTable bodyHandlerTable = 3;
  required bytes pattern = 4;
  required bytes body = 5;
}

message Script {
  required uint32 numSlots = 1;
  repeated Method methods = 2;
  repeated Matcher matchers = 3;
}

message Module {
  repeated Constant constantpool = 1;
  repeated Selector selectorpool = 2;
  repeated Script scriptpool = 3;
  required Method mainMethod = 4;
}
